# gescon-db/controllers/administradoraController.js
@@ -26,12 +26,12 @@ const create = (request, response) => {
         Administradora.create(adm)
             .then((result) => {
                 response.send(result.dataValues);
-            }).catch((error) => { response.send(error) });
-    }).catch((error) => { response.send(error) });
+            }).catch((error) => { response.status(400).send(error) });
+    }).catch((error) => { response.status(400).send(error) });
 };
 
 const getAll = (request, response) => {
-    Administradora.findAll({        
+    Administradora.findAll({
         include: [
             {
                 model: Endereco,
@@ -54,10 +54,72 @@ const getAll = (request, response) => {
         .then((object) => {
             response.status(200);
             response.send(object);
-        }).catch((error) => { response.send(error) });
+        }).catch((error) => { response.status(400).send(error) });
+};
+
+const deleteById = (request, response) => {
+    Administradora.destroy({
+        where: { idadministradora: request.params.id },
+    })
+        .then((object) => {
+            if (object === 0) {
+                response
+                    .status(200)
+                    .send("Nenhuma Administradora foi encontrada para deletar!");
+            } else {
+                response
+                    .status(200)
+                    .send(
+                        "Administradora com id = " + request.params.id + " deletado!"
+                    );
+            }
+        })
+        .catch((error) => {
+            console.error(error);
+            response.status(400).send(error);
+        });
+};
+
+const alterById = (request, response) => {
+    const adm = {
+        nome: request.body.nome,
+        cnpj: request.body.cnpj,
+    };
+
+    Administradora.update(adm, {
+        raw: true,
+        where: { idadministradora: request.params.id },
+    }).then((object) => {
+        if (request.body.endereco != null) {
+            const end = {
+                logradouro: request.body.endereco.logradouro,
+                bairro: request.body.endereco.bairro,
+                cidade: request.body.endereco.cidade,
+                numero: request.body.endereco.numero,
+                cep: request.body.endereco.cep,
+                uf: request.body.endereco.uf
+            };
+            console.log(end);
+            Administradora.findByPk(request.params.id).then((result) => {
+            console.log(result.dataValues);
+            Endereco.update(end, {
+                    raw: true,
+                    where: { idendereco: result.dataValues.idendereco },
+                })
+            });            
+        }
+        response
+                .status(200)
+                .send("Administradora de id = " + request.params.id + " Atualizado!")
+    }).catch((error) => {
+        console.error(error);
+        response.status(400).send(error);
+    });
 };
 
 module.exports = {
     create,
     getAll,
+    deleteById,
+    alterById,
 };
